docs: code update